:recycle: [#31][Refactor]: 전역 context 메모이제이션
전역으로 사용중인 context 의 value들을 useMemo를 통한 메모이제이션을 진행합니다

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
-    "@typescript-eslint/no-unused-expressions": "off",
+    "@typescript-eslint/no-unused-expressions": "off", //parser는 @typescript-eslint 를 사용하고 있으므로 해당 옵션을 제거해야 함
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-shadow": "off",
     "@typescript-eslint/naming-convention": "off",
