:sparkles: [#35][Feat] : 로그인 후 , 메타데이터를 가져와서 저장
로그인 후 , 메인메뉴 선택 페이지에 진입하게 되면 피파온라인에서 제공하는 모든 메타데이터 (선수 spid , 매치 타입id , 선수 시즌 정보 등등)를 가져와서 로컬스토리지에 저장합니다

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "plugin:prettier/recommended"
     // "plugin:@typescript-eslint/recommended" >> "airbnb-typescript" 와 겹침
   ],
+  "ignorePatterns": ["vite.config.ts"],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -44,6 +45,7 @@
     ],
     "no-alert": "off",
     "no-console": "off",
+    "class-methods-use-this": "off",
     // "import/no-extraneous-dependencies": "off",
     // "import/no-unresolved": "off",
     // "import/prefer-default-export": "off",
