--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/naming-convention": "off",
     "react/jsx-no-useless-fragment": "warn",
     "no-nested-ternary": "off",
+    "react/no-array-index-key": "off",
     "import/order": [
       "error",
       {
@@ -43,6 +44,8 @@
         }
       }
     ],
+    "no-restricted-syntax": "off",
+    "no-await-in-loop": "off",
     "no-alert": "off",
     "no-console": "off",
     "class-methods-use-this": "off",
