--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.5",
     "firebase": "^9.19.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.10",
