:bug: [#86][Bug] : Vercel 환경에서 url 참조시 발생하는 404 해결
Vercel 환경에서 배포를 진행하고 , 새로고침을 하거나 url을 통해 특정 페이지에 접근하게 되면 발생하는 에러를 해결합니다

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
     {
       "source": "/live/:path*",
       "destination": "https://fo4.dn.nexoncdn.co.kr/live/:path*"
-    }
+    },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
