:sparkles: [#98][Feat]: 내 기록 페이지(MyRecord.tsx)매치기록 테이블 스타일링
내 기록 페이지(MyRecord.tsx)에 사용되는 매치 기록들을 보여주는 부분을 테이블 형태로 스타일링 합니다

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/naming-convention": "off",
     "react/jsx-no-useless-fragment": "warn",
     "no-nested-ternary": "off",
+    "no-plusplus": "off",
     "react/no-array-index-key": "off",
     "no-param-reassign": "off",
     "import/order": [
