--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
+    "@mantine/core": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/styled-components": "^5.1.26",
