--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^6.0.13",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "apexcharts": "^3.41.0",
     "axios": "^1.3.5",
@@ -23,6 +24,8 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
     "vite-plugin-env-compatible": "^1.1.1"
   },
