:recycle: [#238][Refactor] : 커스텀 에러 객체 생성
에러 처리를 단순히 try catch로만 진행 하는 부분에서 각 상황에 맞는 에러를 적용하기 위해 커스텀 에러 클래스를 생성합니다

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,7 @@
         }
       }
     ],
+    "max-classes-per-file": "off",
     "no-restricted-syntax": "off",
     "no-await-in-loop": "off",
     "no-alert": "off",
