--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
+    "@tanstack/react-query": "^4.33.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/react-slick": "^0.23.10",
