--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/live/:path*",
-      "destination": "https://fo4.dn.nexoncdn.co.kr/live/:path*"
+      "destination": "https://fco.dn.nexoncdn.co.kr/live/:path*"
     },
     { "source": "/(.*)", "destination": "/" }
   ]
